[gd_scene load_steps=10 format=3 uid="uid://d2sgwmnk02oua"]

[ext_resource type="Texture2D" uid="uid://cuxy30l1flsch" path="res://assets/sprites/enemy_dummy.png" id="1_38ino"]
[ext_resource type="Script" uid="uid://tbbjclm2bas7" path="res://scripts/main/enemy/enemy.gd" id="2_fcftc"]
[ext_resource type="Texture2D" uid="uid://dyefffuxqsp4k" path="res://assets/sprites/ui/heart2.png" id="3_lu5c6"]

[sub_resource type="BoxShape3D" id="BoxShape3D_dga24"]
size = Vector3(4.536133, 5.5047607, 13.552429)

[sub_resource type="ViewportTexture" id="ViewportTexture_38ino"]
viewport_path = NodePath("HP_SUB")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qxy0u"]
bg_color = Color(0, 0, 0, 1)
border_color = Color(1, 1, 1, 1)
corner_detail = 1

[sub_resource type="Animation" id="Animation_iav0o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(309, 309)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(22, 1.5)]
}

[sub_resource type="Animation" id="Animation_excbq"]
resource_name = "heart"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 0.32987824, 0.32987824, 1, 1),
"update": 0,
"values": [Vector2(261, 261), Vector2(211, 211), Vector2(261, 261), Vector2(211, 211), Vector2(261, 261)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 0.32987824, 0.32987824, 1, 1),
"update": 0,
"values": [Vector2(46, 25.5), Vector2(71, 50.5), Vector2(46, 25.5), Vector2(71, 50.5), Vector2(46, 25.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dnkej"]
_data = {
&"RESET": SubResource("Animation_iav0o"),
&"heart": SubResource("Animation_excbq")
}

[node name="Enemy" type="Sprite3D"]
transform = Transform3D(0.48303354, 0, 0, 0, 0.48303354, 0, 0, 0, 0.18942633, 0, 0, 0)
pixel_size = 0.008
texture = ExtResource("1_38ino")
script = ExtResource("2_fcftc")
hp = 3

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(0.9999991, 0, 0, 0, 0.9999991, 0, 0, 0, 1, 0, -0.3916626, 6.276222)
shape = SubResource("BoxShape3D_dga24")

[node name="UI_HP" type="Sprite3D" parent="."]
transform = Transform3D(0.24649559, 0, 0, 0, 0.24649559, 0, 0, 0, 0.4, 0, 2.4948921, 1.7687445)
layers = 2
billboard = 1
texture_filter = 0
texture = SubResource("ViewportTexture_38ino")

[node name="HP_SUB" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(823, 312)
render_target_update_mode = 4

[node name="Control" type="Control" parent="HP_SUB"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="HP_SUB/Control"]
layout_mode = 0
offset_right = 823.0
offset_bottom = 312.0
theme_override_styles/panel = SubResource("StyleBoxFlat_qxy0u")

[node name="TextureRect" type="TextureRect" parent="HP_SUB/Control/Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 22.0
offset_top = -154.5
offset_right = 331.0
offset_bottom = 154.5
grow_vertical = 2
texture = ExtResource("3_lu5c6")
expand_mode = 1
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="HP_SUB/Control/Panel"]
libraries = {
&"": SubResource("AnimationLibrary_dnkej")
}
autoplay = "heart"

[node name="hp_label" type="Label" parent="HP_SUB/Control/Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -586.0
offset_top = -41.5
offset_bottom = 41.5
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 115
text = "-current_hp/-max_hp"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
